fix run tests